<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_tracking"
        android:icon="@drawable/ic_tracking"
        android:title="@string/nav_tracking" />
    <item
        android:id="@+id/navigation_routes"
        android:icon="@drawable/ic_routes"
        android:title="@string/nav_routes" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/nav_notifications" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu> 